# Kafka-with-Docker

./: README.md
03_messages_with_kafka/: .env  Dockerfile  compose.yaml  create_topic.sh  pyproject.toml
03_messages_with_kafka/todo/: pyproject.toml
03_messages_with_kafka/todo/app/: config.py  consumer.py  crud.py  database.py  db_test.py  main.py  models.py  producer.py  schemas.py  settings.py
intro_to_EDA/: README.md
kafka_auth/: Dockerfile  compose.yaml  pyproject.toml
kafka_auth/app/: main.py
single_node_app_with_kafka_compose/: Dockerfile  README.md  pyproject.toml
single_node_app_with_kafka_compose/app/: main.py
